# GuildOfHeroes

./: Cargo.toml  rustfmt.toml
config/: config.json
engine/src/: errors.rs  lib.rs  services.rs  tests.rs  world.rs
engine/src/services/: world_building.rs
engine/src/tests/: services.rs  world.rs
engine/src/tests/services/: world_building.rs
engine/src/tests/world/: entities.rs
engine/src/tests/world/entities/global/: map.rs
engine/src/world/: entities.rs  geometry.rs
engine/src/world/entities/: global.rs  guild.rs
engine/src/world/entities/global/: map.rs  settlement.rs  tile.rs
engine/src/world/entities/guild/: builders.rs  hero.rs  mission.rs
engine/src/world/entities/guild/hero/: builders.rs
ideas/: ideas.txt
resources/fonts/: surface_tiles.json
ui/: Cargo.toml
ui/src/: config.rs  core.rs  drawing.rs  errors.rs  main.rs  tests.rs  utils.rs  widgets.rs
ui/src/core/: components.rs  screens.rs  states.rs
ui/src/core/screens/: global_map.rs  global_map_screen.rs  main_menu.rs  main_menu_screen.rs
ui/src/core/states/: global_map.rs
ui/src/drawing/: camera.rs  tile_mapping.rs
ui/src/errors/: processing.rs
ui/src/tests/: drawing.rs
ui/src/tests/drawing/: camera.rs
ui/src/utils/: map_gen.rs
ui/src/widgets/: geometry.rs  menu.rs  rendering.rs
